--- a/web/session/login.xhtml
+++ b/web/session/login.xhtml
@@ -26,7 +26,7 @@
                         <h:inputText value="#{lc.user.password}"></h:inputText>
                     </div>
                 </div>
-                <h:commandButton styleClass="btn btn-warning m-3" action="#{lc.login()}" value="login"></h:commandButton>
+                <h:commandButton styleClass="btn btn-warning m-3" action="#{lc.login}" value="login"></h:commandButton>
                 <h:commandButton styleClass="btn btn-warning" action="/index?faces-redirect-true" value="logout"></h:commandButton>
             
             </h:form>
