--- a/web/panel/category.xhtml
+++ b/web/panel/category.xhtml
@@ -12,7 +12,7 @@
 
             </h:form>
             <hr></hr>
-            <h:form id="category-form">
+            <h:form id="category-form" rendered="#{privilegeBean.getPrivileges(user.group,'Category').icreate }">
 
                 <div class="mb-3">
                     <label class="form-label">Name</label>
@@ -30,12 +30,12 @@
                     <h:inputText styleClass="form-control" value="#{categoryBean.entity.status}"/>
                 </div>
                 <div class="mb-3">
-                    <h:form >
+                    <h:form>
                         <h:commandButton styleClass="btn btn-success btn-sm" rendered="#{privilegeBean.getPrivileges(user.group,'Category').icreate }" action="#{categoryBean.create()}" value="Create">
                             <f:ajax execute="category-form" render="category-table category-form"></f:ajax>     
 
                         </h:commandButton>
-                        <h:commandButton styleClass="btn btn-primary btn-sm" rendered="#{privilegeBean.getPrivileges(user.group,'Category').iupdate }" action="#{categoryBean.update()}" value="Update">
+                        <h:commandButton styleClass="btn btn-primary btn-sm" rendered="#{privilegeBean.getPrivileges(user.group,'Category').iupdate }"  action="#{categoryBean.update()}" value="Update">
                             <f:ajax execute="category-form" render="category-table category-form"></f:ajax>     
 
                         </h:commandButton>
@@ -48,7 +48,7 @@
             </h:form>
             <hr></hr>
             <h:form id="category-table">
-                <h:dataTable  styleClass="table table-striped table-hover" value="#{categoryBean.list}" var="entity" rendered="#{privilegeBean.getPrivileges(user.grup,'Category').icreate }" >
+                <h:dataTable  styleClass="table table-striped table-hover" value="#{categoryBean.list}" var="entity" >
                     <h:column>
                         <f:facet name="header">ID</f:facet>
                             #{entity.id}
@@ -67,11 +67,11 @@
                     </h:column>
                     <h:column >
                         <f:facet name="header">ADMINISTRATION</f:facet>
-                        <h:commandButton styleClass="btn btn-danger btn-sm" rendered="#{categoryBean.entity.id==null and privilegeBean.getPrivileges(user.group,'Category').icreate }" action="#{categoryBean.delete(entity)}" value="Delete">
+                        <h:commandButton styleClass="btn btn-danger btn-sm"  action="#{categoryBean.delete(entity)}" value="Delete">
                             <f:ajax execute="@this" render="category-table category-form"></f:ajax>     
 
                         </h:commandButton>
-                        <h:commandButton styleClass="btn btn-primary btn-sm" rendered="#{categoryBean.entity.id==null and privilegeBean.getPrivileges(user.group,'Category').icreate }" action="#{categoryBean.setEntity(entity)}" value="Update">
+                        <h:commandButton styleClass="btn btn-primary btn-sm"  action="#{categoryBean.setEntity(entity)}" value="Update">
                             <f:ajax execute="@this" render="category-table category-form"></f:ajax>     
 
                         </h:commandButton>
@@ -94,9 +94,9 @@
                         <h:commandButton styleClass="btn btn-warning" action="#{categoryBean.uploadFile()}"
                                          value="Upload"></h:commandButton>
                     </h:panelGrid>
+
                 </h:form>
             </p>
-
         </div>
 
 
