--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -53,9 +53,9 @@
                                     <h:commandButton styleClass="btn btn-danger" action="/panel/blog" value="blog"/>     <br></br>
                                     <h:commandButton styleClass="btn btn-warning" action="/panel/about" value="about"/>    <br></br> 
                                     
-                                    <h:commandButton styleClass="btn btn-warning" action="/panel/privilege" value="privilage"/>    <br></br> 
-                                    <h:commandButton styleClass="btn btn-warning" action="/panel/group" value="group"/>    <br></br> 
-
+                                    <h:commandButton styleClass="btn btn-primary" action="/panel/privilege" value="privilage"/>    <br></br> 
+                                    <h:commandButton styleClass="btn btn-success" action="/panel/group" value="group"/>    <br></br> 
+                                    <h:commandButton styleClass="btn btn-danger" action="/panel/document" value="document"/>    <br></br> 
 
 
                                 </div>
